--- a/view/App.view.xml
+++ b/view/App.view.xml
@@ -1,6 +1,7 @@
 <mvc:View
+    controllerName="ui5.product.controller.App"
     displayBlock="true"
     xmlns="sap.m"
     xmlns:mvc="sap.ui.core.mvc">
-    <Button text="Create new product" />
+    <Button text="Create new product" press='onPressCreateNewProduct'/>
 </mvc:View>
