--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,5 +1,5 @@
 <mvc:View
-    controllerName="ui5.product.controller.App"
+    controllerName="ui5.product.list.controller.App"
     displayBlock="true"
     xmlns="sap.m"
     xmlns:mvc="sap.ui.core.mvc">
