--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -3,5 +3,5 @@
     displayBlock="true"
     xmlns="sap.m"
     xmlns:mvc="sap.ui.core.mvc">
-    <Button text="Create new product" press='onPressCreateNewProduct'/>
+    <Button text="{i18n>buttonTextCreate}" press='onPressCreateNewProduct'/>
 </mvc:View>
