--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -3,5 +3,19 @@
     displayBlock="true"
     xmlns="sap.m"
     xmlns:mvc="sap.ui.core.mvc">
-    <Button text="{i18n>buttonTextCreate}" press='onPressCreateNewProduct'/>
+    <Shell>
+        <App>
+            <Page title="{i18n>apptTitle}">
+                <Input placeholder="{i18n>productName}" width="20rem" maxLength="40"/>
+                <Button text="{i18n>buttonTextCreate}" press='onPressCreateNewProduct' />
+                <List headerText="{i18n>listHeader}" noDataText="{i18n>noDataText}">
+                    <items>
+                        <StandardListItem title="{i18n>listItemTitle}1" type="Active" press="onPressProduct"/>
+                        <StandardListItem title="{i18n>listItemTitle}2" type="Active" press="onPressProduct"/>
+                        <StandardListItem title="{i18n>listItemTitle}3" type="Active" press="onPressProduct"/>
+                    </items>
+                </List>
+            </Page>
+        </App>
+    </Shell>
 </mvc:View>
